--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -185,8 +185,8 @@
           <include>**/*.gif</include>
           <include>**/*.css</include>
           <include>**/*.js</include>
-          <include>org/h2/res/help.csv</include>
-          <include>org/h2/res/javadoc.properties</include>
+          <<!--include>org/h2/res/help.csv</include>
+          <include>org/h2/res/javadoc.properties</include-->
           <include>META-INF/**</include>
         </includes>
       </resource>
